syntax = "proto3";

package sdc.biceps;

option java_package = "org.somda.sdc.proto.model.biceps";
option java_outer_classname = "GetContextStatesResponseType";

import "sdc/biceps/abstractgetresponse.proto";
import "sdc/biceps/abstractcontextstateoneof.proto";

  message GetContextStatesResponse {
    AbstractGetResponse abstract_get_response = 1;
    AbstractContextStateOneOf context_state = 2;
  }
